<resources>
    <string name="app_name">YourMovie</string>

    <string name="fragment_entry_button_sing_in">ВХОД</string>
    <string name="fragment_entry_button_sing_up">РЕГИСТРАЦИЯ</string>

    <string name="fragment_sing_in_title">Вход</string>
    <string name="fragment_sing_in_description">Зарегистрироваться с помощью логина/пароля или с помощтю отпечатка пальца</string>
    <string name="fragment_sing_in_button_done">ГОТОВО</string>
    <string name="fragment_sing_in_field_login">Логин</string>
    <string name="fragment_sing_in_field_password">Пароль</string>

    <string name="fragment_sing_up_title">Регистрация</string>
    <string name="fragment_sing_up_description">Здесь информация о том, что регистрация прошла успешно, и теперь можно добавить отпечаток, если хочется</string>
    <string name="fragment_sing_up_button_qr_scan">СКАНИРОВАНИЕ QR-КОДА</string>
    <string name="fragment_sing_up_button_add_finger">Добавить отпечаток</string>

    <string name="fragment_movie_list_no_internet">Нет соединения</string>

    <string name="fragment_movie_list_button_more_info">More Info</string>
    <string name="fragment_movie_list_button_schedule">Schedule viewing</string>
    <string name="menu_home_exit">Выход</string>
    <string name="menu_bottom_movie_list">Фильмы</string>
    <string name="menu_bottom_favorite_movie_list">Сохраненное</string>

    <string name="fragment_movie_info_default_title">No title</string>
    <string name="fragment_movie_info_default_date">No date</string>
    <string name="fragment_movie_info_default_description">No description</string>
    <string name="menu_movie_info_favorite">Favorite</string>

    <string name="auth_title">Биометрическая аутентификация</string>
    <string name="auth_subtitle"> </string>
    <string name="auth_description"> </string>

    <string name="error_msg_auth_error">Error</string>
    <string name="error_msg_auth_failed">Failed</string>

    <string name="error_msg_no_biometric_hardware">No biometric hardware</string>
    <string name="error_msg_biometric_hw_unavailable">HW unavailable</string>
    <string name="error_msg_biometric_not_setup">Biometric not setup</string>

    <string name="search_by_albums">Поиск по фильмам…</string>
    <string name="start_search">Начни поиск!</string>
    <string name="release_date">Release date:</string>
    <string name="popularity">Popularity:</string>
    <string name="description">Description:</string>
    <string name="country">Country:</string>
    <string name="popular_movies">Popular Movies</string>
</resources>
