<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

<!--        <android.support.design.widget.AppBarLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--            android:fitsSystemWindows="true">-->

<!--            <android.support.design.widget.CollapsingToolbarLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
<!--                app:contentScrim="?attr/colorPrimary"-->
<!--                android:fitsSystemWindows="true">-->

<!--                <ImageView-->
<!--                    android:id="@+id/photo"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="500dp"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    app:layout_collapseMode="parallax" />-->

<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:background="@drawable/gradient" />-->


<!--                <android.support.v7.widget.Toolbar-->
<!--                    android:id="@+id/toolbar"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="?attr/actionBarSize"-->
<!--                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
<!--                    app:layout_collapseMode="pin">-->

<!--                    <ImageButton-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:paddingBottom="10dp"-->
<!--                        android:paddingEnd="10dp"-->
<!--                        android:paddingStart="2dp"-->
<!--                        android:onClick="onClickBack"-->
<!--                        android:src="@drawable/ic_back"-->
<!--                        android:tint="@color/colorWhite"-->
<!--                        android:background="@android:color/transparent" />-->

<!--                </android.support.v7.widget.Toolbar>-->

<!--            </android.support.design.widget.CollapsingToolbarLayout>-->

<!--        </android.support.design.widget.AppBarLayout>-->

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ProgressBar
                            android:id="@+id/progress_circular"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="1dp"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:progressDrawable="@drawable/progress_circle"
                            android:max="100" />

                        <TextView
                            android:id="@+id/progress_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textSize="14sp"
                            android:textColor="@color/colorText" />

                    </RelativeLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TitleText" />

                        <TextView
                            android:id="@+id/original_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/LightText" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_dot_green"
                        android:tint="@color/colorWhite"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/LightText"
                        android:layout_gravity="center_vertical"
                        android:text="@string/release_date"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_dot_green"
                        android:tint="@color/colorWhite"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp" />

                    <TextView
                        android:id="@+id/popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/LightText"
                        android:layout_gravity="center_vertical"
                        android:text="@string/popularity"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/colorWhite"
                    android:translationZ="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        style="@style/DescriptionCardText" />

                    <TextView
                        android:id="@+id/description"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/DescriptionText" />

                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
